--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,12 @@
-p{ 
-	background-color: blue;
+body{ 
+	background-color: black;
+}
+p{
+	color: white;
+}	
+h1{ 
+	color: white;
+}
+ul{
+	color: white;
 }
